adding docker support for basket api and configure portainer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,23 @@ services:
   catalogdb:
     image: mongo
 
+  basketdb:
+    image: redis:alpine
+
+  portainer:
+    image: portainer/portainer-ce
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalog
     build:
       context: .
       dockerfile: src/Services/Catalog/Catalog.API/Dockerfile
+
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basket
+    build:
+      context: .
+      dockerfile: src/Services/Basket/Basket.API/Dockerfile
 
 volumes:
   mongo_data: 
