--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,6 +1,9 @@
-﻿{
+﻿  {
     "CacheSettings": {
       "ConnectionString": "localhost:6379"
+    },
+    "GrpcSettings": {
+      "DiscountUrl": "http://localhost:5003"
     },
     "Logging": {
       "LogLevel": {
@@ -10,4 +13,3 @@
     },
     "AllowedHosts": "*"
   }
-
