--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,16 @@ services:
       context: .
       dockerfile: src/Services/Discount.API/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discount
+    build:
+      context: .
+      dockerfile: src/Services/Discount/Discount.Grpc/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
