--- a/src/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/src/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -12,11 +12,17 @@
   <ItemGroup>
     <None Remove="Persistence\" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
+    <None Remove="Repositories\" />
+    <None Remove="Mail\" />
+    <None Remove="SendGrid" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Persistence\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Mail\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 </Project>
