inicializa injecao de dep services e infra via API

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 ﻿{
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password= sa123456;"
+  },
+  "EmailSettings": {
+    "FromAddress": "raphael.aolima8@gmail.com",
+    "ApiKey": "",
+    "FromName": "Raphael"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
