cria migrações da order context

--- a/src/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/src/Services/Ordering/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -15,6 +15,7 @@
     <None Remove="Repositories\" />
     <None Remove="Mail\" />
     <None Remove="SendGrid" />
+    <None Remove="Microsoft.EntityFrameworkCore.Design" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Persistence\" />
