adicionar suporte a docker no ordering.api

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -87,7 +87,7 @@ services:
     depends_on:
       - discountdb
     ports:
-      - "8004:80"
+      - "8002:80"
 
 
   discount.grpc:
@@ -99,4 +99,15 @@ services:
       - discountdb
     ports:
       - "8003:80"
+
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Encrypt=False;Database=OrderDb;User Id=sa;Password=sa123456;"
+    depends_on:
+      - orderdb
+    ports:
+      - "8004:80"
 
