--- a/src/ApiGateways/Shopping.Aggregator/Shopping.Aggregator.csproj
+++ b/src/ApiGateways/Shopping.Aggregator/Shopping.Aggregator.csproj
@@ -13,9 +13,13 @@
   <ItemGroup>
     <None Remove="Controllers\" />
     <None Remove="Models\" />
+    <None Remove="Services\" />
+    <None Remove="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 </Project>
